--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    const serviceWorkerVersion = "3793162641";
+    var serviceWorkerVersion = "3502640157";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
