--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = "1232000005";
+    const serviceWorkerVersion = "1841263798";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
